Implementação da activity_contato_detalhe.xml, click em item da lista e trafego de dados entre activity.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="more3">mais3</string>
     <string name="content_description_more">botao de seleção mais</string>
     <string name="contatos">contatos</string>
+    <string name="opendrawe">abrir</string>
+    <string name="fechar">fechar</string>
 </resources>
